--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,10 @@
 @import"./mixin";
 @import"./generals";
 @import"./modules/header";
-@import"./modules/hero";
+@import"./modules/hero";    
 @import"./modules/build";
 @import"./modules/product";
 @import"./modules/management";
+@import"./modules/easy";
 
  
