--- a/scss/modules/_product.scss
+++ b/scss/modules/_product.scss
@@ -1,6 +1,15 @@
-
-.build__product{
-padding: 114.11px 0px;
+.build__product {
+    padding-top: 120px; 
+    padding-bottom: 50px;
+    background-color: $bg-gray; 
+    background-image: url("../../images/header_bg.png"); 
+    background-repeat: no-repeat;
+    background-position: top center; 
+    background-size: cover;  
+    margin-top: -50px; 
+    padding-bottom: 100px;
+}
+.background__image{
 
 }
 .product__title {
@@ -34,9 +43,22 @@ padding: 114.11px 0px;
      margin-top: 34px;
 }
 
-.hero__end{
-    background-color:$bg-gray;
-    border-bottom-left-radius: 60%;
-    border-bottom-right-radius: 60%
-}
 
+
+
+
+@media(max-width:810px){
+    .product__list{
+        flex-direction: column;
+    }
+    .product__item{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+    .product__item > p {
+        width: 100%;
+        text-align: center;
+    }
+    
+}
