--- a/css/main.css
+++ b/css/main.css
@@ -436,6 +436,16 @@ body {
     width: 100%;
   }
 }
+.easy__section {
+  background-color: #fffefe;
+  background-image: url("../../images/easy_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
+  margin-bottom: -50px;
+  padding-top: 100px;
+}
+
 .easy > h1 {
   font-weight: 700;
   font-size: 32px;
@@ -457,10 +467,31 @@ body {
   padding-top: 16px;
 }
 
-.easy__item > img {
+.item_img1 {
   width: 98px;
   height: 98px;
   border: 3px solid #FF0909;
+  border-radius: 50%;
+}
+
+.item_img2 {
+  width: 98px;
+  height: 98px;
+  border: 3px solid #740A76;
+  border-radius: 50%;
+}
+
+.item_img3 {
+  width: 98px;
+  height: 98px;
+  border: 3px solid #02897A;
+  border-radius: 50%;
+}
+
+.item_img4 {
+  width: 98px;
+  height: 98px;
+  border: 3px solid #035B81;
   border-radius: 50%;
 }
 
@@ -484,9 +515,60 @@ body {
 .easy__box {
   width: 274px;
   height: 59px;
-  background-color: #22343D;
+  background-color: #fff;
   border-radius: 30px;
   text-align: center;
-  color: #fff;
+  color: #22343D;
   padding-top: 20px;
+}
+
+.easy__btn {
+  padding: 15px 30px;
+  border: 2px solid #02897A;
+  border-radius: 4px;
+  background-color: #02897A;
+  transition: all 0.3s;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  color: #fff;
+  margin-left: 460px;
+  margin-top: 63px;
+}
+
+.step__section {
+  padding: 160px 0;
+}
+
+.s__title {
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  color: #22343D;
+}
+
+.step__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0px;
+  color: #22343D;
+}
+
+.step__item {
+  width: 348px;
+  height: 360px;
+  border-radius: 10px;
+  border: 1px solid #DEDEDE;
+  text-align: start;
+}
+
+.step__title1 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  letter-spacing: 0px;
+  color: #22343D;
 }/*# sourceMappingURL=main.css.map */
